# smart-plot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: ai_utils.py  db_utils.py  kaggle_utils.py
